Use fixed table layout with specific column widths to prevent horizontal scrolling

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -14,6 +14,7 @@
 
 // Posts table styling
 .posts-table {
+  table-layout: fixed;
   width: 100%;
 
   .content-column {
@@ -30,13 +31,15 @@
   }
 
   .narrow-column {
-    width: 1%;
+    width: 50px;
     white-space: nowrap;
   }
 
   .source-column,
   .freefeed-column {
-    width: 1%;
+    width: 70px;
     white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
